<resources>
    <string name="app_name">Share Location</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="settings_category_services">Network services</string>
    <string name="settings_category_general">General</string>
    <string name="appstart_no_gps">Location services are necessary for this application to run. Would you like to turn location services on?</string>
    <string name="appstart_no_gps_title">Location services are off</string>
    <string name="alertdialog_button_yes">Yes</string>
    <string name="alertdialog_button_no">No</string>
    <string name="button_share_location">Send with custom app</string>
    <string name="sharedialog_title_sendlocation">Send location with...</string>
    <string name="settings_language_default">System Default</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_favphonenumber_title">Quick send phone number</string>
    <string name="settings_favphonenumber_description">This phone number is used for the quick send shortcut on the home screen.</string>
    <string name="button_send_sms">Send SMS</string>
    <string name="settings_sms_title">SMS</string>
    <string name="textbox_phonenumber_hint">Enter a phone number...</string>
    <string name="alertdialog_title_warning">Warning</string>
    <string name="alertdialog_text_smswarning">You are about to send a text message. This may incur charges. Are you sure you would like to continue?</string>
    <string name="alertdialog_checkbox_nosmswarning">Don\'t show this warning again</string>
    <string name="alertdialog_title_smserror">Text message failed to send</string>
    <string name="alertdialog_text_phonepermission">Whoops! Looks like the text message failed to send. Don\'t worry, this is the case for most phones. The problem is probably caused by a permission know as \"READ_PHONE_STATE.\" For some phone models, a poorly implemented Android System causes the system to require the READ_PHONE_STATE permission for sending text messages. This is the ONLY phone permission we request (check the app\'s manifest if you want to make sure), so this app does NOT have the permissions to call numbers without your permission, receive any calls, or intercept call logs. Just grant us the permission on the next dialog and you\'ll be good to go! If you would like more information on why this happens, click \"Learn More\" below.</string>
    <string name="alertdialog_button_continue">Continue</string>
    <string name="alertdialog_button_learnmore_english">Learn More</string>
    <string name="alertdialog_title_firstrun">Welcome!</string>
    <string name="alertdialog_title_error">Error</string>
    <string name="alertdialog_button_ok">OK</string>
    <string name="alertdialog_text_nofavphone">You did not enter a favorite phone number in Settings and you set the auto-fill to auto-fill the favorite phone number. Please go to settings and enter a favorite phone number.</string>
    <string name="alertdialog_text_invalidfavphone">Invalid favorite phone number. Please go to settings and make sure the favorite phone number only contains numbers and the \"+\" character (if applicable).</string>
    <string name="alertdialog_text_nophonenumber">Please enter a phone number.</string>
    <string name="mainactivity_title_contacts">Contacts</string>
    <string name="mainactivity_text_nocontacts">No contacts found.\nAdd one by going to Menu -> Contacts</string>
    <string name="alertdialog_hint_name">Contact Name</string>
    <string name="alertdialog_hint_phonenumber">Phone Number</string>
    <string name="alertdialog_button_cancel">Cancel</string>
    <string name="shortcut_title_quicksend">Quick Send</string>
    <string name="shortcut_desc_quicksend">Quickly send a text message to your favorite contact.</string>
    <string name="mainactivity_button_addshortcut">Add Quick Send Shortcut</string>
    <string name="notification_title_channelname">All Notifications</string>
    <string name="notification_title_success">Success</string>
    <string name="notification_content_success">Message has been sent</string>
    <string name="notification_title_failure">Error</string>
    <string name="notification_content_failure">Failed to send message</string>
    <string name="toast_text_gpsoff">Location services been disabled. The location will not be updated until you re-enable location services.</string>
    <string name="toast_text_gpson">Location services have been enabled.</string>
    <string name="notification_title_sending">We are sending your message...</string>
    <string name="notification_content_sending">This will take at most 60 seconds.</string>
    <string name="alertdialog_title_shortcutcheck">Just making sure...</string>
    <string name="alertdialog_text_shortcutcheck">Please ensure that you have done everything in this list before continuing:\n * Set a quick send phone number in settings.\n * Sent a test message with the app to make sure that everything works.</string>
    <string name="alertdialog_button_looksgood">Looks good!</string>
    <string name="alertdialog_button_checkagain">I\'ll check again</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="mainactivity_button_select">Select</string>
    <string name="settings_autofill_title">Phone Number Auto-fill</string>
    <string name="settings_autofill_description">The phone number that will be filled into the text box when the app is opened</string>
    <string name="mainactivity_text_nolocation">Location Not Available</string>
    <string name="settings_mapservice_title">Map Service</string>
    <string name="button_calculate_values">Calculate Values</string>
    <string name="locationactivity_text_distance">Distance from your location:</string>
    <string name="generic_text_unknown">Unknown</string>
    <string name="button_backup_settings">Backup</string>
    <string name="button_restore_settings">Restore</string>
    <string name="title_activity_backup">Backup and Restore</string>
    <string name="backupactivity_text_description">You can back up and restore settings here. Click on \"Backup\" to open up a dialog to save a backup file (in .txt format). Click on \"Restore\" to open up a dialog where you can select a backup. This utility is currently in active development and features may change at any time.\n\nYou should know the limitations of this utility before using it. This utility WILL back up things like:\n * Language settings\n * The default map service\n\nThis utility currently WILL NOT (but may do so in the future) back up things like:\n * Saved contacts\n * The auto-filled phone number</string>
</resources>