<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onShareLocationPressed"
        android:text="@string/button_share_location"
        app:layout_constraintBottom_toTopOf="@+id/phoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/mainactivity_text_nolocation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textbox_phonenumber_hint"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/sendSmsButton"
        app:layout_constraintEnd_toStartOf="@+id/sendSmsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendSmsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onSendSmsPressed"
        android:text="@string/button_send_sms"
        app:layout_constraintBottom_toTopOf="@+id/currentLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/phoneNo" />

    <TextView
        android:id="@+id/contactsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/mainactivity_title_contacts"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fillContact1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noContactsMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mainactivity_text_nocontacts"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactsTitle" />

    <TextView
        android:id="@+id/contactName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/fillContact1"
        app:layout_constraintEnd_toStartOf="@+id/fillContact1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/contactName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/fillContact2"
        app:layout_constraintEnd_toStartOf="@+id/fillContact2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/contactName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/fillContact3"
        app:layout_constraintEnd_toStartOf="@+id/fillContact3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fillContact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="onFillNumber1Pressed"
        android:text="@string/mainactivity_button_select"
        app:layout_constraintBottom_toTopOf="@+id/fillContact2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/fillContact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="onFillNumber2Pressed"
        android:text="@string/mainactivity_button_select"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fillContact3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:onClick="onFillNumber3Pressed"
        android:text="@string/mainactivity_button_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillContact2" />

</android.support.constraint.ConstraintLayout>